styles/global.css
@import url("https://rsms.me/inter/inter.css");

:root {
  --shadow-color: 0deg 0% 59%;
  --font-stack-sans: "Inter", system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol", "Noto Color Emoji";
  --font-stack-sans-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Ubuntu Mono",
    "Liberation Mono", "Courier New", Courier, monospace;
}

*,
::after,
::before {
  box-sizing: border-box;
}

/* https://www.smashingmagazine.com/2019/07/margins-in-css/ */
/* https://alistapart.com/article/settingtypeontheweb/ */
* {
  margin: 0;
  padding: 0;
}

html {
  font-family: var(--font-stack-sans);
  line-height: 1.5;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  text-size-adjust: 100%;
  text-rendering: optimizeLegibility;
  scroll-behavior: smooth;

  width: 100%;
  height: 100%;
}

body,
#__next {
  height: 100%;
}

@supports (font-variation-settings: normal) {
  html {
    font-family: "Inter var", var(--font-stack-sans);
  }
}

#leva__root {
  display: none;
}

canvas {
  touch-action: none;
}

@media (prefers-color-scheme: dark) {
  html,
  body {
    background: #000;
  }
}

